2009-01-31  Lars Hartmann  <lars (at) chaotika (dot) org>

	Fixed memleaks:
	* lib/liblpatom.c (lpatom_get_version): fixed memleak.
	* lib/liblpxpak.c (lpxpak_parse_fd): fixed memleak.

	Made Doxygen work again:
	* doxygen/api-doc: added path to include files.
	* doxygen/dev-doc: added path to include files.
	* Makefile: added variable paths.

	Code Cleanup according to Hayati Ayguen's code review:
	* lib/liblpxpak.c (lpxpak_index_init): split up into
	lpxpak_index_create() and lpxpak_index_init().
	(lpxpak_index_create): added.
	(lpxpak_index_resize): changed to use lpxpak_init.
	(lpxpak_init): split up into lpxpak_create() and lpxpak_init().
	(lpxpak_create): added.
	(lpxpak_blob_init): split up into lpxpak_blob_create() and
	lpxpak_blob_init().
	(lpxpak_blob_create): added.
	* lib/liblpatom.c (lpatom_cmp): rewritten from scratch.
	(lpatom_get_fullname): cleaned up
	(lpatom_get_version): rewritten from scratch.
	(lpatom_get_suffix): rewritten from scratch.
	(lpatom_init): split up into lpatom_create() and lpatom_init().
	(lpatom_create): added.
	* include/liblpatom.h (lpatom_sufe_t): extended documentation.

2009-01-30  Lars Hartmann  <lars (at) chaotika (dot) org>

	* t/xpak_test.c: cleaned up includes

	Moved doxygen make targets:
	* t/Makefile: deleted doxygen targets
	* Makefile: moved doxygen targets here.

	Moved header files to directory "include" :
	* t/Makefile (INCS): changed to new header path.
	* lib/Makefile (INCS): changed to new header path.
	* lib/liblpatom.h: moved.
	* lib/liblpxpak.h: moved.
	* lib/liblputil.h: moved.

	Added tests:
	* Makefile: moved to t/Makefile
	* t/atom_positive.txt: added.
	* t/atom_test.c: added.
	* t/xpak_test.c: added.
	* t/xpak_test.tbz2: added.

2009-01-29  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_datablob_init): added.
	(lpxpak_datablob_destroy): added.
	(lpxpak_datablob_compile): added.
	(lpxpak_blob_compile): changed to use lpxpak_datablob_compile.