@@ -1,5 +1,7 @@
 2009-01-31  Lars Hartmann  <lars (at) chaotika (dot) org>
 
+	* lib/liblputil.c (lputil_intlen): integer overflow
+
 	Fixed memleaks:
 	* lib/liblpatom.c (lpatom_get_version): fixed memleak.
 	* lib/liblpxpak.c (lpxpak_parse_fd): fixed memleak.
